2nd commit of 13/10/22 stopwatch

--- a/StopWatch/app/src/main/res/layout/activity_main2.xml
+++ b/StopWatch/app/src/main/res/layout/activity_main2.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:textColor="#000000"
         android:textSize="45sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -27,8 +28,9 @@
         android:backgroundTint="#234700"
         android:fontFamily="@font/alfa_slab_one"
         android:onClick="startChronometer"
-        android:text="Start"
+        android:text="START"
         android:textColor="#FFFFFF"
+        android:textStyle="bold"
         app:cornerRadius="45dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,8 +43,9 @@
         android:layout_marginTop="40dp"
         android:fontFamily="@font/alfa_slab_one"
         android:onClick="pauseChronometer"
-        android:text="Pause"
+        android:text="HOLD"
         android:textColor="#000000"
+        android:textStyle="bold"
         app:cornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,8 +59,9 @@
         android:backgroundTint="#FF4444"
         android:fontFamily="@font/alfa_slab_one"
         android:onClick="resetChronometer"
-        android:text="Reset"
+        android:text="STOP"
         android:textColor="#FFFFFF"
+        android:textStyle="bold"
         app:cornerRadius="45dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
