--- a/UnitConverter/app/src/main/res/layout/fragment_ckfrag.xml
+++ b/UnitConverter/app/src/main/res/layout/fragment_ckfrag.xml
@@ -11,7 +11,7 @@
         android:id="@+id/etc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter degrees in celsius:"
+        android:hint="Enter length in Miles:"
         android:inputType="numberSigned|numberDecimal"
         android:textSize="25sp"
         android:textColor="@color/white"
