--- a/UnitConverter/app/src/main/res/layout/fragment_fcfrag.xml
+++ b/UnitConverter/app/src/main/res/layout/fragment_fcfrag.xml
@@ -11,7 +11,7 @@
         android:id="@+id/etf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Degrees in Fahrenheit:"
+        android:hint="Length in Centimeters:"
         android:inputType="numberSigned|numberDecimal"
         android:textSize="25sp"
         android:textColor="@color/white"
