--- a/UnitConverter/app/src/main/res/layout/fragment_kffrag.xml
+++ b/UnitConverter/app/src/main/res/layout/fragment_kffrag.xml
@@ -11,7 +11,7 @@
         android:id="@+id/etk"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Degrees in Kelvin:"
+        android:hint="Length in Yards:"
         android:inputType="numberSigned|numberDecimal"
         android:textSize="25sp"
         android:textColor="@color/white"
