--- a/UnitConverter/app/src/main/res/layout/fragment_icfrag.xml
+++ b/UnitConverter/app/src/main/res/layout/fragment_icfrag.xml
@@ -4,14 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ckfrag">
+    tools:context=".icfrag">
 
     <!-- TODO: Update blank fragment layout -->
     <EditText
-        android:id="@+id/etc"
+        android:id="@+id/etf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter length in Miles:"
+        android:hint="Length in Inches:"
         android:inputType="numberSigned|numberDecimal"
         android:textSize="25sp"
         android:textColor="@color/white"
@@ -19,17 +19,16 @@
         android:textColorHint="@color/white"
         android:backgroundTint="@color/white"
         />
-
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/button5"
+        android:layout_gravity="center"
         android:text="Submit"
-        android:textSize="20sp" />
+        android:textSize="20sp"/>
     <TextView
         android:id="@+id/tvk"
         android:layout_width="match_parent"
