--- a/UnitConverter/app/src/main/res/layout/fragment_kmfrag.xml
+++ b/UnitConverter/app/src/main/res/layout/fragment_kmfrag.xml
@@ -4,28 +4,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".kffrag">
+    tools:context=".kmfrag">
 
     <!-- TODO: Update blank fragment layout -->
     <EditText
-        android:id="@+id/etk"
+        android:id="@+id/etc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Length in Yards:"
+        android:hint="Enter length in Kilometers:"
         android:inputType="numberSigned|numberDecimal"
         android:textSize="25sp"
-        android:textColor="@color/white"
         android:textCursorDrawable="@drawable/cursor_color"
+        android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:backgroundTint="@color/white"
         />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/submit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Submit"
         android:textSize="20sp"/>
