--- a/UnitConverter/app/src/main/res/layout/fragment_mkfrag.xml
+++ b/UnitConverter/app/src/main/res/layout/fragment_mkfrag.xml
@@ -4,33 +4,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".cffrag">
+    tools:context=".mkfrag">
 
     <!-- TODO: Update blank fragment layout -->
     <EditText
         android:id="@+id/etc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter length in Kilometers:"
+        android:hint="Enter length in Miles:"
         android:inputType="numberSigned|numberDecimal"
         android:textSize="25sp"
-        android:textCursorDrawable="@drawable/cursor_color"
         android:textColor="@color/white"
+        android:textCursorDrawable="@drawable/cursor_color"
         android:textColorHint="@color/white"
         android:backgroundTint="@color/white"
         />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/submit"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/button5"
         android:text="Submit"
-        android:textSize="20sp"/>
+        android:textSize="20sp" />
     <TextView
-        android:id="@+id/tvf"
+        android:id="@+id/tvk"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="invisible"
